Compiler/CS143/labs/assignments/PA3/cool.output
Terminals unused in grammar

    ERROR
    FLAG


State 11 conflicts: 1 shift/reduce
State 19 conflicts: 1 shift/reduce
State 133 conflicts: 9 shift/reduce
State 145 conflicts: 9 shift/reduce


Grammar

    0 $accept: program $end

    1 program: class_list

    2 class_list: class
    3           | class_list class

    4 class: CLASS TYPEID INHERITS TYPEID '{' features '}' ';'
    5      | CLASS TYPEID '{' features '}' ';'
    6      | error ';'

    7 features: %empty
    8         | feature ';'
    9         | features feature ';'
   10         | error ';'

   11 feature: method_declaration
   12        | attr_declaration

   13 method_declaration: OBJECTID '(' formals ')' ':' TYPEID '{' expr '}'

   14 attr_declaration: OBJECTID ':' TYPEID
   15                 | OBJECTID ':' TYPEID ASSIGN expr

   16 formals: %empty
   17        | formal
   18        | formals ',' formal

   19 formal: OBJECTID ':' TYPEID

   20 expr: OBJECTID ASSIGN expr
   21     | dispatch_expression
   22     | IF expr THEN expr ELSE expr FI
   23     | WHILE expr LOOP expr POOL
   24     | '{' expr_block '}'
   25     | LET let_expr
   26     | CASE expr OF branches ESAC
   27     | NEW TYPEID
   28     | ISVOID expr
   29     | expr '+' expr
   30     | expr '-' expr
   31     | expr '*' expr
   32     | expr '/' expr
   33     | '~' expr
   34     | expr '<' expr
   35     | expr LE expr
   36     | expr '=' expr
   37     | NOT expr
   38     | '(' expr ')'
   39     | OBJECTID
   40     | INT_CONST
   41     | STR_CONST
   42     | BOOL_CONST

   43 branches: branch ';'
   44         | branches branch ';'

   45 branch: OBJECTID ':' TYPEID DARROW expr

   46 let_expr: OBJECTID ':' TYPEID ASSIGN expr IN expr
   47         | OBJECTID ':' TYPEID IN expr
   48         | OBJECTID ':' TYPEID ASSIGN expr ',' let_expr
   49         | OBJECTID ':' TYPEID ',' let_expr
   50         | error ','

   51 expr_block: expr ';'
   52           | expr_block expr ';'
   53           | error ';'

   54 dispatch_expression: expr '@' TYPEID '.' OBJECTID '(' exprs ')'
   55                    | expr '.' OBJECTID '(' exprs ')'
   56                    | OBJECTID '(' exprs ')'

   57 exprs: %empty
   58      | expr
   59      | exprs ',' expr


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 13 38 54 55 56
    ')' (41) 13 38 54 55 56
    '*' (42) 31
    '+' (43) 29
    ',' (44) 18 48 49 50 59
    '-' (45) 30
    '.' (46) 54 55
    '/' (47) 32
    ':' (58) 13 14 15 19 45 46 47 48 49
    ';' (59) 4 5 6 8 9 10 43 44 51 52 53
    '<' (60) 34
    '=' (61) 36
    '@' (64) 54
    '{' (123) 4 5 13 24
    '}' (125) 4 5 13 24
    '~' (126) 33
    error (256) 6 10 50 53
    CLASS (258) 4 5
    ELSE (259) 22
    FI (260) 22
    IF (261) 22
    IN (262) 46 47
    INHERITS (263) 4
    LET (264) 25
    LOOP (265) 23
    POOL (266) 23
    THEN (267) 22
    WHILE (268) 23
    CASE (269) 26
    ESAC (270) 26
    OF (271) 26
    DARROW (272) 45
    NEW (273) 27
    ISVOID (274) 28
    STR_CONST <symbol> (275) 41
    INT_CONST <symbol> (276) 40
    BOOL_CONST <boolean> (277) 42
    TYPEID <symbol> (278) 4 5 13 14 15 19 27 45 46 47 48 49 54
    OBJECTID <symbol> (279) 13 14 15 19 20 39 45 46 47 48 49 54 55 56
    ASSIGN (280) 15 20 46 48
    NOT (281) 37
    LE (282) 35
    ERROR (283)
    FLAG (285)


Nonterminals, with rules where they appear

    $accept (46)
        on left: 0
    program <program> (47)
        on left: 1
        on right: 0
    class_list <classes> (48)
        on left: 2 3
        on right: 1 3
    class <class_> (49)
        on left: 4 5 6
        on right: 2 3
    features <features> (50)
        on left: 7 8 9 10
        on right: 4 5 9
    feature <feature> (51)
        on left: 11 12
        on right: 8 9
    method_declaration <feature> (52)
        on left: 13
        on right: 11
    attr_declaration <feature> (53)
        on left: 14 15
        on right: 12
    formals <formals> (54)
        on left: 16 17 18
        on right: 13 18
    formal <formal> (55)
        on left: 19
        on right: 17 18
    expr <expression> (56)
        on left: 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42
        on right: 13 15 20 22 23 26 28 29 30 31 32 33 34 35 36 37 38 45 46 47 48 51 52 54 55 58 59
    branches <cases> (57)
        on left: 43 44
        on right: 26 44
    branch <case_> (58)
        on left: 45
        on right: 43 44
    let_expr <expression> (59)
        on left: 46 47 48 49 50
        on right: 25 48 49
    expr_block <expressions> (60)
        on left: 51 52 53
        on right: 24 52
    dispatch_expression <expression> (61)
        on left: 54 55 56
        on right: 21
    exprs <expressions> (62)
        on left: 57 58 59
        on right: 54 55 56 59


State 0

    0 $accept: . program $end

    error  shift, and go to state 1
    CLASS  shift, and go to state 2

    program     go to state 3
    class_list  go to state 4
    class       go to state 5


State 1

    6 class: error . ';'

    ';'  shift, and go to state 6


State 2

    4 class: CLASS . TYPEID INHERITS TYPEID '{' features '}' ';'
    5      | CLASS . TYPEID '{' features '}' ';'

    TYPEID  shift, and go to state 7


State 3

    0 $accept: program . $end

    $end  shift, and go to state 8


State 4

    1 program: class_list .
    3 class_list: class_list . class

    error  shift, and go to state 1
    CLASS  shift, and go to state 2

    $end  reduce using rule 1 (program)

    class  go to state 9


State 5

    2 class_list: class .

    $default  reduce using rule 2 (class_list)


State 6

    6 class: error ';' .

    $default  reduce using rule 6 (class)


State 7

    4 class: CLASS TYPEID . INHERITS TYPEID '{' features '}' ';'
    5      | CLASS TYPEID . '{' features '}' ';'

    INHERITS  shift, and go to state 10
    '{'       shift, and go to state 11


State 8

    0 $accept: program $end .

    $default  accept


State 9

    3 class_list: class_list class .

    $default  reduce using rule 3 (class_list)


State 10

    4 class: CLASS TYPEID INHERITS . TYPEID '{' features '}' ';'

    TYPEID  shift, and go to state 12


State 11

    5 class: CLASS TYPEID '{' . features '}' ';'

    error     shift, and go to state 13
    OBJECTID  shift, and go to state 14

    OBJECTID  [reduce using rule 7 (features)]
    '}'       reduce using rule 7 (features)

    features            go to state 15
    feature             go to state 16
    method_declaration  go to state 17
    attr_declaration    go to state 18


State 12

    4 class: CLASS TYPEID INHERITS TYPEID . '{' features '}' ';'

    '{'  shift, and go to state 19


State 13

   10 features: error . ';'

    ';'  shift, and go to state 20


State 14

   13 method_declaration: OBJECTID . '(' formals ')' ':' TYPEID '{' expr '}'
   14 attr_declaration: OBJECTID . ':' TYPEID
   15                 | OBJECTID . ':' TYPEID ASSIGN expr

    '('  shift, and go to state 21
    ':'  shift, and go to state 22


State 15

    5 class: CLASS TYPEID '{' features . '}' ';'
    9 features: features . feature ';'

    OBJECTID  shift, and go to state 14
    '}'       shift, and go to state 23

    feature             go to state 24
    method_declaration  go to state 17
    attr_declaration    go to state 18


State 16

    8 features: feature . ';'

    ';'  shift, and go to state 25


State 17

   11 feature: method_declaration .

    $default  reduce using rule 11 (feature)


State 18

   12 feature: attr_declaration .

    $default  reduce using rule 12 (feature)


State 19

    4 class: CLASS TYPEID INHERITS TYPEID '{' . features '}' ';'

    error     shift, and go to state 13
    OBJECTID  shift, and go to state 14

    OBJECTID  [reduce using rule 7 (features)]
    '}'       reduce using rule 7 (features)

    features            go to state 26
    feature             go to state 16
    method_declaration  go to state 17
    attr_declaration    go to state 18


State 20

   10 features: error ';' .

    $default  reduce using rule 10 (features)


State 21

   13 method_declaration: OBJECTID '(' . formals ')' ':' TYPEID '{' expr '}'

    OBJECTID  shift, and go to state 27

    $default  reduce using rule 16 (formals)

    formals  go to state 28
    formal   go to state 29


State 22

   14 attr_declaration: OBJECTID ':' . TYPEID
   15                 | OBJECTID ':' . TYPEID ASSIGN expr

    TYPEID  shift, and go to state 30


State 23

    5 class: CLASS TYPEID '{' features '}' . ';'

    ';'  shift, and go to state 31


State 24

    9 features: features feature . ';'

    ';'  shift, and go to state 32


State 25

    8 features: feature ';' .

    $default  reduce using rule 8 (features)


State 26

    4 class: CLASS TYPEID INHERITS TYPEID '{' features . '}' ';'
    9 features: features . feature ';'

    OBJECTID  shift, and go to state 14
    '}'       shift, and go to state 33

    feature             go to state 24
    method_declaration  go to state 17
    attr_declaration    go to state 18


State 27

   19 formal: OBJECTID . ':' TYPEID

    ':'  shift, and go to state 34


State 28

   13 method_declaration: OBJECTID '(' formals . ')' ':' TYPEID '{' expr '}'
   18 formals: formals . ',' formal

    ')'  shift, and go to state 35
    ','  shift, and go to state 36


State 29

   17 formals: formal .

    $default  reduce using rule 17 (formals)


State 30

   14 attr_declaration: OBJECTID ':' TYPEID .
   15                 | OBJECTID ':' TYPEID . ASSIGN expr

    ASSIGN  shift, and go to state 37

    $default  reduce using rule 14 (attr_declaration)


State 31

    5 class: CLASS TYPEID '{' features '}' ';' .

    $default  reduce using rule 5 (class)


State 32

    9 features: features feature ';' .

    $default  reduce using rule 9 (features)


State 33

    4 class: CLASS TYPEID INHERITS TYPEID '{' features '}' . ';'

    ';'  shift, and go to state 38


State 34

   19 formal: OBJECTID ':' . TYPEID

    TYPEID  shift, and go to state 39


State 35

   13 method_declaration: OBJECTID '(' formals ')' . ':' TYPEID '{' expr '}'

    ':'  shift, and go to state 40


State 36

   18 formals: formals ',' . formal

    OBJECTID  shift, and go to state 27

    formal  go to state 41


State 37

   15 attr_declaration: OBJECTID ':' TYPEID ASSIGN . expr

    IF          shift, and go to state 42
    LET         shift, and go to state 43
    WHILE       shift, and go to state 44
    CASE        shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    STR_CONST   shift, and go to state 48
    INT_CONST   shift, and go to state 49
    BOOL_CONST  shift, and go to state 50
    OBJECTID    shift, and go to state 51
    NOT         shift, and go to state 52
    '~'         shift, and go to state 53
    '{'         shift, and go to state 54
    '('         shift, and go to state 55

    expr                 go to state 56
    dispatch_expression  go to state 57


State 38

    4 class: CLASS TYPEID INHERITS TYPEID '{' features '}' ';' .

    $default  reduce using rule 4 (class)


State 39

   19 formal: OBJECTID ':' TYPEID .

    $default  reduce using rule 19 (formal)


State 40

   13 method_declaration: OBJECTID '(' formals ')' ':' . TYPEID '{' expr '}'

    TYPEID  shift, and go to state 58


State 41

   18 formals: formals ',' formal .

    $default  reduce using rule 18 (formals)


State 42

   22 expr: IF . expr THEN expr ELSE expr FI

    IF          shift, and go to state 42
    LET         shift, and go to state 43
    WHILE       shift, and go to state 44
    CASE        shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    STR_CONST   shift, and go to state 48
    INT_CONST   shift, and go to state 49
    BOOL_CONST  shift, and go to state 50
    OBJECTID    shift, and go to state 51
    NOT         shift, and go to state 52
    '~'         shift, and go to state 53
    '{'         shift, and go to state 54
    '('         shift, and go to state 55

    expr                 go to state 59
    dispatch_expression  go to state 57


State 43

   25 expr: LET . let_expr

    error     shift, and go to state 60
    OBJECTID  shift, and go to state 61

    let_expr  go to state 62


State 44

   23 expr: WHILE . expr LOOP expr POOL

    IF          shift, and go to state 42
    LET         shift, and go to state 43
    WHILE       shift, and go to state 44
    CASE        shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    STR_CONST   shift, and go to state 48
    INT_CONST   shift, and go to state 49
    BOOL_CONST  shift, and go to state 50
    OBJECTID    shift, and go to state 51
    NOT         shift, and go to state 52
    '~'         shift, and go to state 53
    '{'         shift, and go to state 54
    '('         shift, and go to state 55

    expr                 go to state 63
    dispatch_expression  go to state 57


State 45

   26 expr: CASE . expr OF branches ESAC

    IF          shift, and go to state 42
    LET         shift, and go to state 43
    WHILE       shift, and go to state 44
    CASE        shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    STR_CONST   shift, and go to state 48
    INT_CONST   shift, and go to state 49
    BOOL_CONST  shift, and go to state 50
    OBJECTID    shift, and go to state 51
    NOT         shift, and go to state 52
    '~'         shift, and go to state 53
    '{'         shift, and go to state 54
    '('         shift, and go to state 55

    expr                 go to state 64
    dispatch_expression  go to state 57


State 46

   27 expr: NEW . TYPEID

    TYPEID  shift, and go to state 65


State 47

   28 expr: ISVOID . expr

    IF          shift, and go to state 42
    LET         shift, and go to state 43
    WHILE       shift, and go to state 44
    CASE        shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    STR_CONST   shift, and go to state 48
    INT_CONST   shift, and go to state 49
    BOOL_CONST  shift, and go to state 50
    OBJECTID    shift, and go to state 51
    NOT         shift, and go to state 52
    '~'         shift, and go to state 53
    '{'         shift, and go to state 54
    '('         shift, and go to state 55

    expr                 go to state 66
    dispatch_expression  go to state 57


State 48

   41 expr: STR_CONST .

    $default  reduce using rule 41 (expr)


State 49

   40 expr: INT_CONST .

    $default  reduce using rule 40 (expr)


State 50

   42 expr: BOOL_CONST .

    $default  reduce using rule 42 (expr)


State 51

   20 expr: OBJECTID . ASSIGN expr
   39     | OBJECTID .
   56 dispatch_expression: OBJECTID . '(' exprs ')'

    ASSIGN  shift, and go to state 67
    '('     shift, and go to state 68

    $default  reduce using rule 39 (expr)


State 52

   37 expr: NOT . expr

    IF          shift, and go to state 42
    LET         shift, and go to state 43
    WHILE       shift, and go to state 44
    CASE        shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    STR_CONST   shift, and go to state 48
    INT_CONST   shift, and go to state 49
    BOOL_CONST  shift, and go to state 50
    OBJECTID    shift, and go to state 51
    NOT         shift, and go to state 52
    '~'         shift, and go to state 53
    '{'         shift, and go to state 54
    '('         shift, and go to state 55

    expr                 go to state 69
    dispatch_expression  go to state 57


State 53

   33 expr: '~' . expr

    IF          shift, and go to state 42
    LET         shift, and go to state 43
    WHILE       shift, and go to state 44
    CASE        shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    STR_CONST   shift, and go to state 48
    INT_CONST   shift, and go to state 49
    BOOL_CONST  shift, and go to state 50
    OBJECTID    shift, and go to state 51
    NOT         shift, and go to state 52
    '~'         shift, and go to state 53
    '{'         shift, and go to state 54
    '('         shift, and go to state 55

    expr                 go to state 70
    dispatch_expression  go to state 57


State 54

   24 expr: '{' . expr_block '}'

    error       shift, and go to state 71
    IF          shift, and go to state 42
    LET         shift, and go to state 43
    WHILE       shift, and go to state 44
    CASE        shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    STR_CONST   shift, and go to state 48
    INT_CONST   shift, and go to state 49
    BOOL_CONST  shift, and go to state 50
    OBJECTID    shift, and go to state 51
    NOT         shift, and go to state 52
    '~'         shift, and go to state 53
    '{'         shift, and go to state 54
    '('         shift, and go to state 55

    expr                 go to state 72
    expr_block           go to state 73
    dispatch_expression  go to state 57


State 55

   38 expr: '(' . expr ')'

    IF          shift, and go to state 42
    LET         shift, and go to state 43
    WHILE       shift, and go to state 44
    CASE        shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    STR_CONST   shift, and go to state 48
    INT_CONST   shift, and go to state 49
    BOOL_CONST  shift, and go to state 50
    OBJECTID    shift, and go to state 51
    NOT         shift, and go to state 52
    '~'         shift, and go to state 53
    '{'         shift, and go to state 54
    '('         shift, and go to state 55

    expr                 go to state 74
    dispatch_expression  go to state 57


State 56

   15 attr_declaration: OBJECTID ':' TYPEID ASSIGN expr .
   29 expr: expr . '+' expr
   30     | expr . '-' expr
   31     | expr . '*' expr
   32     | expr . '/' expr
   34     | expr . '<' expr
   35     | expr . LE expr
   36     | expr . '=' expr
   54 dispatch_expression: expr . '@' TYPEID '.' OBJECTID '(' exprs ')'
   55                    | expr . '.' OBJECTID '(' exprs ')'

    LE   shift, and go to state 75
    '<'  shift, and go to state 76
    '='  shift, and go to state 77
    '+'  shift, and go to state 78
    '-'  shift, and go to state 79
    '*'  shift, and go to state 80
    '/'  shift, and go to state 81
    '@'  shift, and go to state 82
    '.'  shift, and go to state 83

    $default  reduce using rule 15 (attr_declaration)


State 57

   21 expr: dispatch_expression .

    $default  reduce using rule 21 (expr)


State 58

   13 method_declaration: OBJECTID '(' formals ')' ':' TYPEID . '{' expr '}'

    '{'  shift, and go to state 84


State 59

   22 expr: IF expr . THEN expr ELSE expr FI
   29     | expr . '+' expr
   30     | expr . '-' expr
   31     | expr . '*' expr
   32     | expr . '/' expr
   34     | expr . '<' expr
   35     | expr . LE expr
   36     | expr . '=' expr
   54 dispatch_expression: expr . '@' TYPEID '.' OBJECTID '(' exprs ')'
   55                    | expr . '.' OBJECTID '(' exprs ')'

    THEN  shift, and go to state 85
    LE    shift, and go to state 75
    '<'   shift, and go to state 76
    '='   shift, and go to state 77
    '+'   shift, and go to state 78
    '-'   shift, and go to state 79
    '*'   shift, and go to state 80
    '/'   shift, and go to state 81
    '@'   shift, and go to state 82
    '.'   shift, and go to state 83


State 60

   50 let_expr: error . ','

    ','  shift, and go to state 86


State 61

   46 let_expr: OBJECTID . ':' TYPEID ASSIGN expr IN expr
   47         | OBJECTID . ':' TYPEID IN expr
   48         | OBJECTID . ':' TYPEID ASSIGN expr ',' let_expr
   49         | OBJECTID . ':' TYPEID ',' let_expr

    ':'  shift, and go to state 87


State 62

   25 expr: LET let_expr .

    $default  reduce using rule 25 (expr)


State 63

   23 expr: WHILE expr . LOOP expr POOL
   29     | expr . '+' expr
   30     | expr . '-' expr
   31     | expr . '*' expr
   32     | expr . '/' expr
   34     | expr . '<' expr
   35     | expr . LE expr
   36     | expr . '=' expr
   54 dispatch_expression: expr . '@' TYPEID '.' OBJECTID '(' exprs ')'
   55                    | expr . '.' OBJECTID '(' exprs ')'

    LOOP  shift, and go to state 88
    LE    shift, and go to state 75
    '<'   shift, and go to state 76
    '='   shift, and go to state 77
    '+'   shift, and go to state 78
    '-'   shift, and go to state 79
    '*'   shift, and go to state 80
    '/'   shift, and go to state 81
    '@'   shift, and go to state 82
    '.'   shift, and go to state 83


State 64

   26 expr: CASE expr . OF branches ESAC
   29     | expr . '+' expr
   30     | expr . '-' expr
   31     | expr . '*' expr
   32     | expr . '/' expr
   34     | expr . '<' expr
   35     | expr . LE expr
   36     | expr . '=' expr
   54 dispatch_expression: expr . '@' TYPEID '.' OBJECTID '(' exprs ')'
   55                    | expr . '.' OBJECTID '(' exprs ')'

    OF   shift, and go to state 89
    LE   shift, and go to state 75
    '<'  shift, and go to state 76
    '='  shift, and go to state 77
    '+'  shift, and go to state 78
    '-'  shift, and go to state 79
    '*'  shift, and go to state 80
    '/'  shift, and go to state 81
    '@'  shift, and go to state 82
    '.'  shift, and go to state 83


State 65

   27 expr: NEW TYPEID .

    $default  reduce using rule 27 (expr)


State 66

   28 expr: ISVOID expr .
   29     | expr . '+' expr
   30     | expr . '-' expr
   31     | expr . '*' expr
   32     | expr . '/' expr
   34     | expr . '<' expr
   35     | expr . LE expr
   36     | expr . '=' expr
   54 dispatch_expression: expr . '@' TYPEID '.' OBJECTID '(' exprs ')'
   55                    | expr . '.' OBJECTID '(' exprs ')'

    '@'  shift, and go to state 82
    '.'  shift, and go to state 83

    $default  reduce using rule 28 (expr)


State 67

   20 expr: OBJECTID ASSIGN . expr

    IF          shift, and go to state 42
    LET         shift, and go to state 43
    WHILE       shift, and go to state 44
    CASE        shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    STR_CONST   shift, and go to state 48
    INT_CONST   shift, and go to state 49
    BOOL_CONST  shift, and go to state 50
    OBJECTID    shift, and go to state 51
    NOT         shift, and go to state 52
    '~'         shift, and go to state 53
    '{'         shift, and go to state 54
    '('         shift, and go to state 55

    expr                 go to state 90
    dispatch_expression  go to state 57


State 68

   56 dispatch_expression: OBJECTID '(' . exprs ')'

    IF          shift, and go to state 42
    LET         shift, and go to state 43
    WHILE       shift, and go to state 44
    CASE        shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    STR_CONST   shift, and go to state 48
    INT_CONST   shift, and go to state 49
    BOOL_CONST  shift, and go to state 50
    OBJECTID    shift, and go to state 51
    NOT         shift, and go to state 52
    '~'         shift, and go to state 53
    '{'         shift, and go to state 54
    '('         shift, and go to state 55

    $default  reduce using rule 57 (exprs)

    expr                 go to state 91
    dispatch_expression  go to state 57
    exprs                go to state 92


State 69

   29 expr: expr . '+' expr
   30     | expr . '-' expr
   31     | expr . '*' expr
   32     | expr . '/' expr
   34     | expr . '<' expr
   35     | expr . LE expr
   36     | expr . '=' expr
   37     | NOT expr .
   54 dispatch_expression: expr . '@' TYPEID '.' OBJECTID '(' exprs ')'
   55                    | expr . '.' OBJECTID '(' exprs ')'
